# walmart

./: .gitignore  01_EDA.ipynb  02-Baseline_Model.ipynb  03-Regularized_Regression.ipynb  README.md  pyproject.toml
src/: preprocessing.py
src/input/: Walmart_clean.csv
